k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  labels:
    app: shipping-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: shipping-service
  type: ClusterIP
